--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.12.0
   get_x: ^5.0.0
+  google_fonts: ^6.3.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
