--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.12.0
-  get_x: ^5.0.0
   google_fonts: ^6.3.3
+  go_router: ^17.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
