--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.12.0
-  google_fonts: ^6.3.3
   go_router: ^17.0.1
+  google_fonts: ^6.3.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
